<resources>
    <string name="app_name">NewsReader</string>

    <string-array name="pager_titles">
        <item>Top headlines</item>
        <item>Technology</item>
        <item>Entertainment</item>
        <item>Health</item>
    </string-array>

    <string name="added_to_favorites">Feed added to your favorites successfully</string>
    <string name="removed_from_favorites">Feed removed from your favorites successfully</string>

    <!--Accessibility-->
    <string name="publisher_icon">Publisher icon</string>
    <string name="card_image">Feed image</string>
    <string name="article_image">Article image</string>
    <string name="drawer_logo">Application logo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_message">Widget empty. widget will automatically updated once you navigate the app.</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_article_details">Article Details</string>
    <string name="discover">Discover</string>
    <string name="favorites">Favorites</string>
    <string name="bottom_navigation_border">Bottom navigation border</string>
    <string name="share_icon">Share icon</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="no_favorites">Empty. you haven\'t added any article to your favorites yet!</string>
    <string name="action_retry">Retry</string>

</resources>
