<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_400"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/widget_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/appwidget_text"
        android:gravity="center"
        android:padding="@dimen/card_outer_padding"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/md_white_1000" />

    <ListView
        android:id="@+id/widget_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/widget_empty_message"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>