<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/articles_pager_dest">

    <fragment
        android:id="@+id/favorites_dest"
        android:name="com.ajdi.yassin.newsreader.ui.favorites.FavoritesFragment"
        android:label="@string/label_favorites"
        tools:layout="@layout/fragment_favorites">

        <action
            android:id="@+id/action_favorites_dest_to_article_details_dest"
            app:destination="@id/article_details_dest" />
    </fragment>
    <fragment
        android:id="@+id/articles_pager_dest"
        android:name="com.ajdi.yassin.newsreader.ui.pager.ArticlesPagerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_articles_pager">
        <action
            android:id="@+id/action_articles_pager_dest_to_article_details_dest"
            app:destination="@id/article_details_dest" />
    </fragment>
    <fragment
        android:id="@+id/article_details_dest"
        android:name="com.ajdi.yassin.newsreader.ui.details.ArticleDetailsFragment"
        android:label="@string/label_article_details"
        tools:layout="@layout/fragment_article_details" >
        <argument
            android:name="article_id"
            app:argType="string" />
    </fragment>
</navigation>